<resources>
    <string name="app_name">Med-Manager</string>
    <string name="action_settings">Settings</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="email">Email (Optional)</string>
    <string name="phone">Phone (Optional)</string>
    <string name="password">Password</string>
    <string name="signup_with_google">Or signup with</string>
    <string name="google">G+ Google</string>
    <string name="login_with_google">Or login with Google</string>
    <string name="ok_caps">OK</string>
    <string name="cancel">Cancel</string>
    <string name="oops">Oops!</string>
    <string name="name_password_cant_empty">Please name and password must be provided.</string>
    <string name="email_name">Email or Name</string>
    <string name="google_signin_failed">Sorry Google sign in failed. Please try again.</string>
    <string name="connection_not_avalable">Internet connection not available. Please check settings.</string>
    <string name="pref_file_name">com.github.med_manager.shared_prefs.user_prefs</string>
    <string name="prefs_file_loggedin_status_key">LoggedIn</string>
    <string name="no_meds">No medications yet</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="drug_name">Drug name</string>
    <string name="interval">Interval</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="password_email_not_matching">Password, Name or Email is incorrect.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_unsuccessful">Sorry an error occurred. Sign up unsuccessful.</string>
    <string name="account_already_exist">Account already exist with some of this details.</string>
    <string name="no_account">Account not available, please signup.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Open Drawer</string>
    <string name="search">Search</string>
    <string name="search_hint">Search drug, interval, etc</string>
    <string name="new_medication">New Medication</string>
    <string name="hours_in_between">Hours in Between (Optional)</string>
    <string name="save">Save</string>
    <string name="fill_all">Please fill all non-optional fields.</string>
    <string name="sort">Sort</string>
    <string name="prefs_file_med_dates_key">MedDates</string>
    <string name="med_about_start_noti_message">The %1$s you\'re supposed to take starts today.</string>
    <string name="med_ends">The %1$s you were taking ends today. Congratulations.</string>
    <string name="interval_eg">Interval (e.g 3x daily)</string>
    <string name="prefs_file_med_interval_key">Intervals</string>
    <string name="its_time_noti_message">It\'s time to take your %1$s.</string>
    <string name="no_results">No drugs here with that name</string>
    <string name="account_details">Account Details</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
</resources>
