<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/white_trans">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/splash_screen_logo"
                android:layout_width="@dimen/landing_logo_size"
                android:layout_height="@dimen/landing_logo_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:alpha="1.0"
                android:src="@drawable/logo"
                tools:ignore="contentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="normal"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/larger_horizontal_margin"
                android:layout_marginStart="@dimen/larger_horizontal_margin"
                android:layout_marginRight="@dimen/larger_horizontal_margin"
                android:layout_marginEnd="@dimen/larger_horizontal_margin"
                android:layout_marginTop="70dp"
                android:background="@drawable/green_to_dark_green"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/larger_horizontal_margin"
                android:layout_marginStart="@dimen/larger_horizontal_margin"
                android:layout_marginRight="@dimen/larger_horizontal_margin"
                android:layout_marginEnd="@dimen/larger_horizontal_margin"
                android:layout_marginTop="50dp"
                android:background="@drawable/green_to_dark_green"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>