<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/drug_name_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_gray"
            android:textStyle="bold"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextInputLayoutTheme.TextAppearance">

            <EditText
                android:id="@+id/drug_name"
                style="@style/EditText.Single"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/touchable_size"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:hint="@string/drug_name"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor_gray"
                android:textSize="@dimen/login_edit_text_text_size"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_gray"
            android:textStyle="bold"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextInputLayoutTheme.TextAppearance">

            <EditText
                android:id="@+id/description"
                style="@style/EditText.Single"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/touchable_size"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:hint="@string/description"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor_gray"
                android:textSize="@dimen/login_edit_text_text_size"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/interval_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:background="@color/white_trans"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_gray"
            android:textStyle="bold"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextInputLayoutTheme.TextAppearance">

            <EditText
                android:id="@+id/interval"
                style="@style/EditText.Single"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/touchable_size"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:hint="@string/interval_eg"
                android:inputType="number"
                android:textCursorDrawable="@drawable/cursor_gray"
                android:textSize="@dimen/login_edit_text_text_size"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hours_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_trans"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_gray"
            android:textStyle="bold"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextInputLayoutTheme.TextAppearance">

            <EditText
                android:id="@+id/hours"
                style="@style/EditText.Single"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/touchable_size"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:hint="@string/hours_in_between"
                android:inputType="number"
                android:textColor="@color/gray"
                android:textCursorDrawable="@drawable/cursor_gray"
                android:textSize="@dimen/login_edit_text_text_size"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/start_date_wrapper"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/white_trans"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/cursor_gray"
                android:textStyle="bold"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextInputLayoutTheme.TextAppearance">

                <EditText
                    android:id="@+id/start_date"
                    style="@style/EditText.Single"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/touchable_size"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="10dp"
                    android:hint="@string/start_date"
                    android:inputType="date"
                    android:textColor="@color/gray"
                    android:textCursorDrawable="@drawable/cursor_gray"
                    android:textSize="@dimen/login_edit_text_text_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/end_date_wrapper"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/white_trans"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/cursor_gray"
                android:textStyle="bold"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextInputLayoutTheme.TextAppearance">

                <EditText
                    android:id="@+id/end_date"
                    style="@style/EditText.Single"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/touchable_size"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="10dp"
                    android:hint="@string/end_date"
                    android:inputType="date"
                    android:textColor="@color/gray"
                    android:textCursorDrawable="@drawable/cursor_gray"
                    android:textSize="@dimen/login_edit_text_text_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

        </FrameLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/larger_horizontal_margin"
            android:layout_marginLeft="@dimen/larger_horizontal_margin"
            android:layout_marginRight="@dimen/larger_horizontal_margin"
            android:layout_marginStart="@dimen/larger_horizontal_margin"
            android:layout_marginTop="40dp"
            android:background="@drawable/green_to_dark_green"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>